[package]
name = "larix"
version = "0.1.0"

description = "XML as a tree: Read and write"
keywords = ["xml", "parser", "writer", "tree", "parsing"]
categories = ["parser-implementations"]

license = "MPL-2"
rust-version = "1.65"
edition = "2021"

include = ["src/*", "LICENSE", "README.md"]

[dependencies]
quick-xml = "0.36"

[[test]]
name = "all"
path = "tests/tests.rs"
